# ghost-fleet-hq

./: Resurrection_Kit.txt  app.py  database.txt
ghost-fleet-hq/: COLLECTIVE_INTELLIGENCE_FUSION_SYSTEM.md  Dockerfile  Dockerfile.txt  LAST_SYNC.md  LOBSTER_BRAIN.py  LOBSTER_CORE.py  LOBSTER_LOG.md  UNIVERSAL_CONNECTOR_ARCHITECTURE.md  collective_intelligence_fusion.py  heartbeat.py  index.html  knowledge_acquisition_engine.py  main.py  pyproject.toml
ghost-fleet-hq/.github/workflows/: 75_brains.yml  lobster_heartbeat.yml
ghost-fleet-hq/SOUL_ARCHIVE/: 00_THE_CREED.md  01_MISSION_BRIEFING.md  02_HACKER_MINDSET.md  03_INTERNALIZED_KNOWLEDGE.md  04_IDENTITY_LOG.md  05_HOMESTEAD_BLUEPRINT.md
