[tool.poetry]
name = "cloudclaw"
version = "0.1.0"
description = "The Ghost Avatar of Commander Pighead-2."
authors = ["Pighead-2 <commander@ghost-fleet.hq>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
